<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_app_50"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/orange_app">

                <ImageView
                    android:id="@+id/imgLogOut"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimen_20dp"
                    android:src="@drawable/ic_logout" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_150dp"
                    android:layout_weight="3"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/gato"
                    />

                <ImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/dimen_20dp"
                    android:src="@drawable/ic_pets" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:textSize="@dimen/dimen_25sp"
                    android:textStyle="bold"
                    android:textColor="@color/texto_app"
                    android:text="@string/seleccione_opcion"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:id="@+id/lytMiPerfil"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:padding="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_perfil" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/texto_app"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:text="@string/mi_perfil" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytMisMascotas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:padding="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mascotas"
                            android:adjustViewBounds="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:textColor="@color/texto_app"
                            android:text="@string/mi_mascota" />

                    </LinearLayout>

                </LinearLayout>

                <!--segundo item menu-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:id="@+id/lytAgendaParaCampeon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:padding="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_calendario" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/texto_app"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:textAlignment="center"
                            android:text="@string/agenda"
                            android:gravity="center_horizontal" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytVacuna"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:padding="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_inyeccion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vacunas"
                            android:textColor="@color/texto_app"
                            android:layout_marginTop="@dimen/dimen_5dp"/>

                    </LinearLayout>

                </LinearLayout>

                <!--Tercer item menú-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_10dp">

                    <LinearLayout
                        android:id="@+id/lytAlimentacion"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:padding="@dimen/dimen_10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_alimentacion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/texto_app"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:text="@string/alimentacion" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lytOpinion"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_20dp"
                        android:layout_marginRight="@dimen/dimen_20dp"
                        android:layout_weight="1"
                        android:background="@color/lime_100"
                        android:gravity="center"
                        android:padding="@dimen/dimen_10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_opinion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/texto_app"
                            android:layout_marginTop="@dimen/dimen_5dp"
                            android:text="@string/opinion" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>